--- a/src/Presentation/SmartStore.Web/Views/Boards/Partials/_CreateUpdateTopic.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Boards/Partials/_CreateUpdateTopic.cshtml
@@ -69,7 +69,7 @@
 					<i class="fa fa-reply"></i>
                     <span>@T("Forum.Submit")</span>
 				</button>
-                <button class="btn" onclick="setLocation('@Url.RouteUrl("ForumSlug", new { id = Model.ForumId, slug = Model.ForumSeName }) '); return false;">
+                <button class="btn btn-secondary" onclick="setLocation('@Url.RouteUrl("ForumSlug", new { id = Model.ForumId, slug = Model.ForumSeName }) '); return false;">
                     <i class="fa fa-times"></i>
                     <span>@T("Forum.Cancel")</span>
                 </button>
