--- a/src/Presentation/SmartStore.Web/Views/Customer/BackInStockSubscriptions.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Customer/BackInStockSubscriptions.cshtml
@@ -61,7 +61,7 @@
 
 		<div class="buttons">
 			<button type="submit" class="btn btn-danger btn-lg delete-selected-biss-button">
-				@T("Account.BackInStockSubscriptions.DeleteSelected")
+                <span>@T("Account.BackInStockSubscriptions.DeleteSelected")</span>
 			</button>
 		</div>
 	</div>
