--- a/src/Presentation/SmartStore.Web/Views/Customer/DownloadableProducts.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Customer/DownloadableProducts.cshtml
@@ -55,7 +55,7 @@
 					else
 					{
 						<a class="btn btn-secondary btn-flat rounded-0 disabled" href="javascript:void(0)" rel="nofollow">
-							@T("DownloadableProducts.Fields.Download.NA")
+                            <span>@T("DownloadableProducts.Fields.Download.NA")</span>
 						</a>
 					}
 
