--- a/src/Presentation/SmartStore.Web/Views/PrivateMessages/Partials/Inbox.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/PrivateMessages/Partials/Inbox.cshtml
@@ -79,11 +79,11 @@
         }
         <div class="buttons">
             <button class="btn btn-danger" name="delete-inbox" value="delete-inbox" type="submit" >
-                <i class="fa fa-trash-o"></i>&nbsp;&nbsp;
-                @T("PrivateMessages.Inbox.DeleteSelected")
+                <i class="fa fa-trash-o"></i>
+                <span>@T("PrivateMessages.Inbox.DeleteSelected")</span>
             </button>
 
-            <button class="btn" name="mark-unread" value="mark-unread" type="submit">
+            <button class="btn btn-secondary" name="mark-unread" value="mark-unread" type="submit">
                 @T("PrivateMessages.Inbox.MarkAsUnread")
             </button>
         </div>
