--- a/src/Presentation/SmartStore.Web/Views/Product/EmailAFriend.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Product/EmailAFriend.cshtml
@@ -60,7 +60,8 @@
 
                     <div class="form-group">
                         <button type="submit" name="send-email" class="btn btn-primary send-email-a-friend-button">
-						    <i class="fa fa-envelope"></i>&nbsp;@T("Products.EmailAFriend.Button")
+						    <i class="fa fa-envelope"></i>
+                            <span>@T("Products.EmailAFriend.Button")</span>
 					    </button>
                     </div>
 
