--- a/src/Presentation/SmartStore.Web/Views/Customer/Orders.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Customer/Orders.cshtml
@@ -68,7 +68,7 @@
                                     @item.CyclesRemaining
                                 </td>
                                 <td>
-									<a class="btn" href="@Url.Action("Details", "Order", new { id = item.InitialOrderId })" rel="nofollow">
+									<a class="btn btn-secondary" href="@Url.Action("Details", "Order", new { id = item.InitialOrderId })" rel="nofollow">
 										<i class="fa fa-list-alt"></i>
 										@string.Format(@T("Account.CustomerOrders.RecurringOrders.ViewInitialOrder").Text, item.InitialOrderId)
 									</a>
