--- a/src/Presentation/SmartStore.Web/Views/Customer/UserAgreement.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Customer/UserAgreement.cshtml
@@ -37,9 +37,10 @@
                     </label>
                 </div>
             </div>
-            <button type="submit" id="continue-downloading" class="btn" value="@T("Common.Continue")"
+            <button type="submit" id="continue-downloading" class="btn btn-secondary" value="@T("Common.Continue")"
                     onclick="setLocation('@Url.Action("GetDownload", "Download", new { id = Model.OrderItemGuid, agree = true })')">
-                <i class="fa fa-check"></i>&nbsp;@T("Common.Continue")
+                <i class="fa fa-check"></i>
+                <span>@T("Common.Continue")</span>
             </button>
         </div>
     </div>
