--- a/src/Presentation/SmartStore.Web/Views/PrivateMessages/Partials/SentItems.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/PrivateMessages/Partials/SentItems.cshtml
@@ -23,67 +23,68 @@
     {
         using (Html.BeginForm("SentUpdate", (string)null))
         {
-            
-            
-        <table class="table" cellspacing="0" cellpadding="4" id="pm-sent-table">
-            <col width="5%" />
-            <col width="20%" />
-            <col width="50%" />
-            <col width="25%" />
-            <thead>
-                <tr class="pm-grid-header-style">
-                    <th class="a-center">
-                        <input type="checkbox" id="selectall-sent" />
-                    </th>
-                    <th class="a-center">
-                        @T("PrivateMessages.Inbox.ToColumn")
-                    </th>
-                    <th class="a-center">
-                        @T("PrivateMessages.Inbox.SubjectColumn")
-                    </th>
-                    <th class="a-center">
-                        @T("Common.Date")
-                    </th>
-                </tr>
-            </thead>
-            <tbody>
-                @for (int i = 0; i < Model.Messages.Count; i++)
-                {
-                    var item = Model.Messages[i];
-                    <tr>
-                        <td class="a-center">
-                            <input type="checkbox" name="si@(item.Id)" class="rowcheckbox" />
-                        </td>
-                        <td class="a-left">
-                            @if (item.AllowViewingToProfile)
-                            {
-                                @Html.RouteLink(item.CustomerToName, "CustomerProfile", new { Id = item.ToCustomerId })
-                            }
-                            else
-                            {
-                                @item.CustomerToName
-                            }
-                        </td>
-                        <td class="a-left">
-                            @Html.ActionLink(item.Subject, "View", new { id = item.Id }, new { @class = "pm-read" })
-                        </td>
-                        <td class="a-left">
-                            @item.CreatedOn
-                        </td>
+
+            <table class="table" cellspacing="0" cellpadding="4" id="pm-sent-table">
+                <col width="5%" />
+                <col width="20%" />
+                <col width="50%" />
+                <col width="25%" />
+                <thead>
+                    <tr class="pm-grid-header-style">
+                        <th class="a-center">
+                            <input type="checkbox" id="selectall-sent" />
+                        </th>
+                        <th class="a-center">
+                            @T("PrivateMessages.Inbox.ToColumn")
+                        </th>
+                        <th class="a-center">
+                            @T("PrivateMessages.Inbox.SubjectColumn")
+                        </th>
+                        <th class="a-center">
+                            @T("Common.Date")
+                        </th>
                     </tr>
-                }
-            </tbody>
-        </table>
-        if (Model.TotalPages > 1)
-        {
-            @Html.SmartStore().Pager(Model).Name("paginator").Route("PrivateMessages", ViewData["PagerRouteValues"])
-        }
-        <div class="buttons">
-            <button class="btn btn-danger" name="delete-sent" type="submit" value="delete-sent">
-                <i class="fa fa-trash-o"></i>&nbsp;&nbsp;
-                @T("PrivateMessages.Inbox.DeleteSelected")
-            </button>
-        </div>
+                </thead>
+                <tbody>
+                    @for (int i = 0; i < Model.Messages.Count; i++)
+                    {
+                        var item = Model.Messages[i];
+                        <tr>
+                            <td class="a-center">
+                                <input type="checkbox" name="si@(item.Id)" class="rowcheckbox" />
+                            </td>
+                            <td class="a-left">
+                                @if (item.AllowViewingToProfile)
+                                {
+                                    @Html.RouteLink(item.CustomerToName, "CustomerProfile", new { Id = item.ToCustomerId })
+                                }
+                                else
+                                {
+                                    @item.CustomerToName
+                                }
+                            </td>
+                            <td class="a-left">
+                                @Html.ActionLink(item.Subject, "View", new { id = item.Id }, new { @class = "pm-read" })
+                            </td>
+                            <td class="a-left">
+                                @item.CreatedOn
+                            </td>
+                        </tr>
+                    }
+                </tbody>
+            </table>
+
+            if (Model.TotalPages > 1)
+            {
+                @Html.SmartStore().Pager(Model).Name("paginator").Route("PrivateMessages", ViewData["PagerRouteValues"])
+            }
+
+            <div class="buttons">
+                <button class="btn btn-danger" name="delete-sent" type="submit" value="delete-sent">
+                    <i class="fa fa-trash-o"></i>
+                    <span>@T("PrivateMessages.Inbox.DeleteSelected")</span>
+                </button>
+            </div>
         }
     }
 </div>
