--- a/src/Presentation/SmartStore.Web/Views/PrivateMessages/Send.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/PrivateMessages/Send.cshtml
@@ -1,11 +1,8 @@
 ﻿@model SendPrivateMessageModel
-
 @using SmartStore.Web;
 @using SmartStore.Web.Models.PrivateMessages;
-
 @{    
     Layout = "_Layout";
-
     Html.AddTitleParts(T("PageTitle.SendPM").Text);
 }
 
@@ -62,7 +59,7 @@
                         <button type="submit" class="btn btn-primary">
                             @T("PrivateMessages.Send.SendButton")
                         </button>
-                        <button class="btn" onclick="setLocation('@Url.RouteUrl("PrivateMessages", new { tab = "inbox" })')" >
+                        <button class="btn btn-secondary" onclick="setLocation('@Url.RouteUrl("PrivateMessages", new { tab = "inbox" })')" >
                             @T("PrivateMessages.Send.CancelButton")
                         </button>
                     </td>
