--- a/src/Presentation/SmartStore.Web/Themes/Flex/Content/_checkout.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/Content/_checkout.scss
@@ -1,8 +1,156 @@
-﻿/// <reference path="bs4/scss/bootstrap.scss" />
+﻿/// <reference path="_variables.scss" />
+/// <reference path="shared/_mixins.scss" />
+/// <reference path="bs4/scss/bootstrap.scss" />
 
 //
-// Checkout Styles
+// Checkout Steps
 // --------------------------------------------------
+
+$costep-border:                 #f2f2f2;
+$costep-bg:                     #fff; 
+$costep-color:                  #ccc;
+$costep-label-color:            $body-color;
+
+$costep-visited-border:         $brand-warning;
+$costep-visited-bg:             $brand-warning;
+$costep-visited-color:          rgba(#fff, 0.85);
+$costep-visited-label-color:    $costep-label-color;
+
+$costep-active-border:          $costep-visited-border;
+$costep-active-bg:              #fff;
+$costep-active-color:           $body-color;
+$costep-active-label-color:     $costep-label-color;
+
+.costeps {
+    position: relative;
+	margin-top: 2rem;  
+    margin-bottom: 1rem;
+    flex-wrap: nowrap;
+}
+
+.costep,
+.costep-link,
+.costep-icon {
+    display: block;
+    position: relative;
+    z-index: 1;
+}
+
+.costep {
+    text-align: center;
+    z-index: 1;
+
+    &:before,
+    &:after {
+        display: block;
+        content: ' ';
+        position: absolute;
+        height: 2px;
+        background-color: $costep-border;
+        z-index: 0;
+        top: 5px;
+    }
+
+    &:before {
+        left: 0;
+        right: 50%;
+    }
+
+    &:after {
+        left: 50%;
+        right: 0;
+    }
+
+    &:first-child:before,
+    &:last-child:after {
+        display: none;
+    }
+}
+
+.costep-link {
+    color: inherit;
+    text-decoration: none !important;
+}
+
+.costep-icon {
+    width: 12px;
+    height: 12px;
+    border-radius: 50%;
+    border: 2px solid $costep-border;
+    background-color: $costep-bg;
+    color: $costep-color;
+    margin: 0 auto;
+}
+
+.costep-label {
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    font-size: 85%;
+    display: block;
+    padding: 0.5rem 3px 0 3px;
+    color: $costep-label-color;
+}
+
+.costep.visited {
+    &:before, &:after {
+        background-color: $costep-visited-border;
+    }
+    .costep-icon {
+        border-color: $costep-visited-border;
+        background-color: $costep-visited-bg;
+        color: $costep-visited-color;
+    }
+    .costep-label {
+        color: $costep-visited-label-color;
+    }
+}
+
+.costep.active {
+    &:before {
+        background-color: $costep-active-border;
+    }
+    .costep-icon {
+        border-color: $costep-active-border;
+        background-color: $costep-active-bg;
+        color: $costep-active-color;
+    }
+    .costep-label {
+        font-weight: $font-weight-bold;
+        color: $costep-active-label-color;
+    }
+}
+
+@include media-breakpoint-up(sm) {
+    .costep:before,
+    .costep:after {
+        top: 24px;
+    }
+
+    .costep-icon {
+        width: 50px;
+        height: 50px;
+        line-height: 54px;
+        text-align: center;
+        vertical-align: middle;
+
+        &:before {
+            @include fontastic("\e74b", 20px);
+        
+            [data-step=cart] &	    { content: '\e74b' /* icm-bag */; }
+            [data-step=address] &	{ content: '\e600' /* icm-home */; }
+            [data-step=shipping] & 	{ content: '\e857' /* icm-truck */; transform: translateY(-3px); }
+            [data-step=payment] & 	{ content: '\e759' /* icm-credit-card */ }
+            [data-step=confirm] & 	{ content: '\e919' /* icm-thumbs-up */; }
+            [data-step=complete] & 	{ content: '\e934' /* icm-check */ }
+        }
+    }
+
+    .costep-label {
+        font-size: 90%;
+    }
+}
+
 
 
 /* Checkout
@@ -69,104 +217,10 @@
 }
 
 
-/* Order Progress
-================================================ */
-
-.order-progress {
-	margin: 0 auto;
-	text-align: center;
-	border-bottom: 1px solid #ddd;
-	padding: 8px 0;
-	//background-color: @var_CheckoutProgressBackgroundColor;
-}
-.order-progress ul li {
-	display: inline;
-}
-.order-progress .order-progress-step {
-	position: relative;
-	display: inline-block;
-	padding: 38px 12px 4px;
-	text-decoration: none;
-	color: #818181;
-	border: 1px solid transparent;
-	cursor: default;
-	//.transition(opacity .1s linear);
-}
-.order-progress .visited .order-progress-step {
-	cursor: pointer;
-	color: #333;
-    /*
-	.opacity(75);
-	&:hover {
-		.opacity(100);
-	}
-    */
-}
-.order-progress .active .order-progress-step {
-	background: #f2f2f2;
-	color: #333;
-	border-color: #ccc;
-    /*
-    .opacity(100);
-	.border-radius(4px);
-	.box-shadow(~"inset 0 2px 8px rgba(0,0,0,.08)");
-        */
-}
-/*
-.order-progress .inactive .order-progress-step {
-	.opacity(50);
-}
-    */
-.order-progress .order-progress-step:before {
-	position: absolute;
-	top: 8px;
-	left: 50%;
-	margin-left: -16px;
-	font-family: FontAwesome;
-	font-weight: normal;
-	font-size: 32px;
-	line-height: 32px;
-	width: 32px;
-	height: 32px;
-	content: '\f07a';
-	display: inline-block;
-	text-decoration: inherit;
-	//.opacity(75);
-}
-.order-progress .order-progress-step.step-address:before	{ content: '\f015' /* fa-home */; }
-.order-progress .order-progress-step.step-shipping:before 	{ content: '\f0d1' /* fa-truck */; }
-.order-progress .order-progress-step.step-payment:before 	{ content: '\f09d' /* fa-creditcard */ }
-.order-progress .order-progress-step.step-confirm:before 	{ content: '\f087' /* fa-thumbs-up */; }
-.order-progress .order-progress-step.step-complete:before 	{ content: '\f058' /* fa-ok-sign */ }
-
 .order-summary-page #content-body {
 	margin-top: 0;
 }
 
-@include media-breakpoint-down(md) {
-    .order-progress {
-        padding: 0;
-    }
-    .order-progress .order-progress-step {
-        font-size: 12px;
-        padding: 34px 6px 0;
-    }
-    .order-progress .order-progress-step:before {
-        font-size: 24px;
-    }
-}
-@include media-breakpoint-down(sm) {
-    .order-progress {
-        padding: 0;
-    }
-    .order-progress .order-progress-step {
-        font-size: 10px;
-        padding: 32px 6px 0;
-    }
-    .order-progress .order-progress-step:before {
-        font-size: 16px;
-    }
-}
 
 /* Order Summary
 ================================================ */
