--- a/src/Presentation/SmartStore.Web/Views/Checkout/Partials/CheckoutProgress.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Checkout/Partials/CheckoutProgress.cshtml
@@ -2,91 +2,90 @@
 @using SmartStore.Web.Models.Checkout;
 
 @{
-    var progresses = new List<dynamic> {
+	var progresses = new List<dynamic> {
         // Cart
         new {
-            Step = CheckoutProgressStep.Cart,
-            ClassName = "step-cart",
-            Label =  T("Checkout.Progress.Cart").Text,
-            Visited = Model.CheckoutProgressStep > CheckoutProgressStep.Cart,
-            Active = Model.CheckoutProgressStep == CheckoutProgressStep.Cart,
-            Href = Url.RouteUrl("ShoppingCart")
-        },
+			Step = CheckoutProgressStep.Cart,
+			StepName = "cart",
+			Label =  T("Checkout.Progress.Cart").Text,
+			Visited = Model.CheckoutProgressStep > CheckoutProgressStep.Cart,
+			Active = Model.CheckoutProgressStep == CheckoutProgressStep.Cart,
+			Href = Url.RouteUrl("ShoppingCart")
+		},
         // Address
         new {
-            Step = CheckoutProgressStep.Address,
-            ClassName = "step-address",
-            Label =  T("Checkout.Progress.Address").Text,
-            Visited = Model.CheckoutProgressStep > CheckoutProgressStep.Address,
-            Active = Model.CheckoutProgressStep == CheckoutProgressStep.Address,
-            Href = Url.Action("BillingAddress")
-        },
+			Step = CheckoutProgressStep.Address,
+			StepName = "address",
+			Label =  T("Checkout.Progress.Address").Text,
+			Visited = Model.CheckoutProgressStep > CheckoutProgressStep.Address,
+			Active = Model.CheckoutProgressStep == CheckoutProgressStep.Address,
+			Href = Url.Action("BillingAddress")
+		},
         // Shipping
         new {
-            Step = CheckoutProgressStep.Shipping,
-            ClassName = "step-shipping",
-            Label =  T("Checkout.Progress.Shipping").Text,
-            Visited = Model.CheckoutProgressStep > CheckoutProgressStep.Shipping,
-            Active = Model.CheckoutProgressStep == CheckoutProgressStep.Shipping,
-            Href = Url.Action("ShippingMethod")
-        },
+			Step = CheckoutProgressStep.Shipping,
+			StepName = "shipping",
+			Label =  T("Checkout.Progress.Shipping").Text,
+			Visited = Model.CheckoutProgressStep > CheckoutProgressStep.Shipping,
+			Active = Model.CheckoutProgressStep == CheckoutProgressStep.Shipping,
+			Href = Url.Action("ShippingMethod")
+		},
         // Payment
         new {
-            Step = CheckoutProgressStep.Payment,
-            ClassName = "step-payment",
-            Label =  T("Checkout.Progress.Payment").Text,
-            Visited = Model.CheckoutProgressStep > CheckoutProgressStep.Payment,
-            Active = Model.CheckoutProgressStep == CheckoutProgressStep.Payment,
-            Href = Url.Action("PaymentMethod")
-        },
+			Step = CheckoutProgressStep.Payment,
+			StepName = "payment",
+			Label =  T("Checkout.Progress.Payment").Text,
+			Visited = Model.CheckoutProgressStep > CheckoutProgressStep.Payment,
+			Active = Model.CheckoutProgressStep == CheckoutProgressStep.Payment,
+			Href = Url.Action("PaymentMethod")
+		},
         // Confirm
         new {
-            Step = CheckoutProgressStep.Confirm,
-            ClassName = "step-confirm",
-            Label =  T("Checkout.Progress.Confirm").Text,
-            Visited = Model.CheckoutProgressStep > CheckoutProgressStep.Confirm,
-            Active = Model.CheckoutProgressStep == CheckoutProgressStep.Confirm,
-            Href = Url.Action("Confirm")
-        },
+			Step = CheckoutProgressStep.Confirm,
+			StepName = "confirm",
+			Label =  T("Checkout.Progress.Confirm").Text,
+			Visited = Model.CheckoutProgressStep > CheckoutProgressStep.Confirm,
+			Active = Model.CheckoutProgressStep == CheckoutProgressStep.Confirm,
+			Href = Url.Action("Confirm")
+		},
         // Complete
         new {
-            Step = CheckoutProgressStep.Complete,
-            ClassName = "step-complete",
-            Label =  T("Checkout.Progress.Complete").Text,
-            Visited = Model.CheckoutProgressStep > CheckoutProgressStep.Complete,
-            Active = Model.CheckoutProgressStep == CheckoutProgressStep.Complete,
-            Href = "javascript:void(0)"
-        }
-    };
+			Step = CheckoutProgressStep.Complete,
+			StepName = "complete",
+			Label =  T("Checkout.Progress.Complete").Text,
+			Visited = Model.CheckoutProgressStep > CheckoutProgressStep.Complete,
+			Active = Model.CheckoutProgressStep == CheckoutProgressStep.Complete,
+			Href = "javascript:void(0)"
+		}
+	};
 }
 
-<nav class="order-progress">
-    <ul class="list-unstyled">
-        @{ Html.RenderWidget("checkout_progress_before"); }
+@{ Html.RenderWidget("checkout_steps_before"); }
 
-        @foreach (var p in progresses)
-        {
-            string liClass = null;
-            string href = p.Visited || p.Active ? p.Href : "javascript:void(0)";
-            if (p.Visited)
-            {
-                liClass = "visited";
-            }
-            else if (p.Active)
-            {
-                liClass = "active";
-            }
-            else
-            {
-                liClass = "inactive";
-            }
-            <li class="@liClass">
-                <a class="order-progress-step @p.ClassName" href="@href">
-                    <span class="order-progress-label">@p.Label</span>
-                </a>
-            </li>
-        }
+<div class="costeps row no-gutters">
+	@foreach (var p in progresses)
+	{
+		string stateClass = null;
+		string href = p.Visited || p.Active ? p.Href : "javascript:void(0)";
+		if (p.Visited)
+		{
+			stateClass = "visited";
+		}
+		else if (p.Active)
+		{
+			stateClass = "active";
+		}
+		else
+		{
+			stateClass = "inactive";
+		}
+		<div class="col-2 costep @stateClass" data-step="@p.StepName">
+			<a class="costep-link" href="@href">
+				<i class="costep-icon"></i>
+				<span class="costep-label">@p.Label</span>
+			</a>
+		</div>
+	}
+</div>
 
-        @{ Html.RenderWidget("checkout_progress_after"); }
-    </ul>
-</nav>
+@{ Html.RenderWidget("checkout_steps_after"); }
