--- a/src/Plugins/SmartStore.OfflinePayment/Views/OfflinePayment/ManualPaymentInfo.cshtml
+++ b/src/Plugins/SmartStore.OfflinePayment/Views/OfflinePayment/ManualPaymentInfo.cshtml
@@ -6,7 +6,7 @@
 
 @Html.Hidden("OfflinePaymentMethodType", "Manual")
 
-<div class="form-horizontal">
+<div class="opt-form">
     <div class="form-group row">
         @Html.LabelFor(model => model.CreditCardTypes, new { @class = "col-md-3 col-form-label required" })
         <div class="col-md-9">
