--- a/src/Plugins/SmartStore.OfflinePayment/Views/OfflinePayment/PurchaseOrderNumberPaymentInfo.cshtml
+++ b/src/Plugins/SmartStore.OfflinePayment/Views/OfflinePayment/PurchaseOrderNumberPaymentInfo.cshtml
@@ -7,6 +7,6 @@
 
 @Html.Hidden("OfflinePaymentMethodType", "PurchaseOrderNumber")
 
-<div class="form-horizontal">
+<div class="opt-form">
     @Html.ControlGroupFor(model => model.PurchaseOrderNumber, required: true, breakpoint: "md")
 </div>
