--- a/src/Plugins/SmartStore.PayPal/Views/PayPalDirect/PaymentInfo.cshtml
+++ b/src/Plugins/SmartStore.PayPal/Views/PayPalDirect/PaymentInfo.cshtml
@@ -6,7 +6,7 @@
 @using SmartStore.PayPal.Models;
 @using SmartStore.Web.Framework;
 
-<div class="form-horizontal paypal-direct">
+<div class="opt-form paypal-direct">
     <div class="form-group row">
         @Html.LabelFor(model => model.CreditCardTypes, new { @class = "col-md-3 col-form-label required" })
         <div class="col-md-9">
