--- a/src/Plugins/SmartStore.PayPal/Views/PayPalExpress/PaymentInfo.cshtml
+++ b/src/Plugins/SmartStore.PayPal/Views/PayPalExpress/PaymentInfo.cshtml
@@ -12,7 +12,7 @@
             @T("Plugins.Payments.PayPalExpress.SelectionText")
         </div>
 
-        <div class="form-horizontal">
+        <div class="opt-form">
             <a href='@Url.Action("SubmitButton", "PayPalExpress", new { area = "SmartStore.PayPal" })'>
                 <img id="paypal-express-button" alt="" src="@Url.Content(Model.SubmitButtonImageUrl)" />
             </a>
