--- a/src/Presentation/SmartStore.Web/Views/Checkout/ShippingMethod.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Checkout/ShippingMethod.cshtml
@@ -12,41 +12,52 @@
 
 <div class="page shipping-method-page">
     <div class="page-title">
-        <h1>@T("Checkout.SelectShippingMethod")</h1>
+        <h1 class="h3">@T("Checkout.SelectShippingMethod")</h1>
     </div>
     <div class="page-body checkout-data">
         @using (Html.BeginForm())
-        {
-            Html.RenderWidget("checkout_shipping_method_top");
+		{
+			Html.RenderWidget("checkout_shipping_method_top");
 
-            <div class="opt-list shipping-options">
-                @if (Model.Warnings.Count == 0)
-                {
-                    for (int i = 0; i < Model.ShippingMethods.Count; i++)
-                    {
-                        var shippingMethod = Model.ShippingMethods[i];
-                                
-                        <div class="opt-list-item@(shippingMethod.Selected ? " selected" : "") shipping-option-item">
+			if (Model.Warnings.Count > 0)
+			{
+				<div class="alert alert-danger">
+					<ul>
+						@for (int i = 0; i < Model.Warnings.Count; i++)
+						{
+							<li>@Model.Warnings[i]</li>
+						}
+					</ul>
+				</div>
+			}
+			else
+			{
+				<ul class="list-group opt-list shipping-options">
+					@for (int i = 0; i < Model.ShippingMethods.Count; i++)
+					{
+						var shippingMethod = Model.ShippingMethods[i];
+
+						<li class="list-group-item opt-list-item shipping-option-item@(shippingMethod.Selected ? " active" : "")">
 							<div class="opt-data">
-								@if (shippingMethod.FeeRaw != 0)
-								{
-									<div class="opt-fee shipping-fee pull-right text-success">
-										@shippingMethod.Fee
-									</div>
-								}
 								<div class="opt-control option-name radio">
 									<label for="shippingoption_@(i)">
 										<input id="shippingoption_@(i)" type="radio" name="shippingoption" class="opt-radio"
 											   @Html.Attr("checked", "checked", shippingMethod.Selected)
 											   value="@(shippingMethod.Name)___@(shippingMethod.ShippingRateComputationMethodSystemName)" />
-                                        <span class="opt-name">@Html.Raw(HttpUtility.HtmlDecode(shippingMethod.Name))</span>
+										<span class="opt-name">@Html.Raw(HttpUtility.HtmlDecode(shippingMethod.Name))</span>
 									</label>
 								</div>
+								@if (shippingMethod.FeeRaw != 0)
+								{
+									<div class="opt-fee shipping-fee text-danger">
+										@shippingMethod.Fee
+									</div>
+								}
 							</div>
-							@if (!String.IsNullOrEmpty(shippingMethod.Description))
+							@if (shippingMethod.Description.HasValue())
 							{
 								<div class="opt-info text-muted shipping-option-description">
-									@if (!String.IsNullOrEmpty(shippingMethod.BrandUrl))
+									@if (shippingMethod.BrandUrl.HasValue())
 									{
 										<div class="media">
 											<span class="pull-left">
@@ -62,29 +73,19 @@
 										@Html.Raw(shippingMethod.Description)
 									}
 								</div>
-							}
-                        </div>
-                    }
-                }
-                else
-                {
-                    <div class="alert alert-danger">
-                        <ul>
-                            @for (int i = 0; i < Model.Warnings.Count; i++)
-                            {
-                                <li>@Model.Warnings[i]</li>
-                            }
-                        </ul>
-                    </div>
-                }
-            </div>
-			
+						}
+						</li>
+					}
+				</ul>
+			}
+
             <div class="buttons">
                 <a class="btn btn-secondary btn-lg" href="@Url.Action("ShippingAddress")">
                     <i class="fa fa-angle-left"></i>
                     <span>@T("Common.Back")</span>
                 </a>    
-                <input type="submit" name="nextstep" id="nextstep" style="display:none" />
+
+                <input type="submit" name="nextstep" id="nextstep" class="d-none" />
 
                 <button class="btn btn-warning btn-lg shipping-method-next-step-button" onclick="$('#nextstep').trigger('click');return false;">
 					<span>@T("Checkout.NextButton")</span>
@@ -103,10 +104,10 @@
 			var radio = $(this);
 			var systemName = radio.val();
 
-			$('.checkout-data .opt-list-item').removeClass('selected');
+			$('.checkout-data .opt-list-item').removeClass('active');
 
 			var item = radio.closest('.opt-list-item');
-			item.addClass("selected");
+			item.addClass("active");
 		});
 	});
 </script>
