Theming: checkout stuff

--- a/src/Presentation/SmartStore.Web/Views/Checkout/Confirm.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Checkout/Confirm.cshtml
@@ -16,7 +16,7 @@
 
 <div class="page checkout-confirm-page">
     <div class="page-title">
-        <h1>@T("Checkout.ConfirmYourOrder")</h1>
+        <h1 class="h3">@T("Checkout.ConfirmYourOrder")</h1>
     </div>
     <div class="page-body checkout-data">
         @using (Html.BeginForm(null, null, FormMethod.Post, new { id = "confirm-order-form" }))
