--- a/src/Presentation/SmartStore.Web/Views/Checkout/BillingAddress.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Checkout/BillingAddress.cshtml
@@ -12,7 +12,7 @@
 
 <div class="page billing-address-page">
     <div class="page-title">
-        <h1>@T("Checkout.BillingAddress")</h1>
+        <h1 class="h3">@T("Checkout.BillingAddress")</h1>
     </div>
     <div class="page-body checkout-data">
         @{ Html.RenderWidget("checkout_billing_address_top"); }
