--- a/src/Presentation/SmartStore.Web/Views/ShoppingCart/Cart.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/ShoppingCart/Cart.cshtml
@@ -2,15 +2,19 @@
 @using SmartStore.Web.Models.Checkout
 @using SmartStore.Web.Models.ShoppingCart;
 @{
-    Layout = "_Layout";
+    Layout = "_Checkout";
     Html.AddBodyCssClass("order-summary-page no-offcanvas-cart");
     Html.AddTitleParts(T("PageTitle.ShoppingCart").Text);
-    Html.RenderAction("CheckoutProgress", "Checkout", new { step = CheckoutProgressStep.Cart });
+    //Html.RenderAction("CheckoutProgress", "Checkout", new { step = CheckoutProgressStep.Cart });
 }
 
-<div class="page shopping-cart-page mt-4">
+@section orderProgress{
+	@{ Html.RenderAction("CheckoutProgress", "Checkout", new { step = CheckoutProgressStep.Cart }); }
+}
+
+<div class="page shopping-cart-page">
     <div class="page-title">
-        <h1>@T("ShoppingCart")</h1>
+        <h1 class="h3">@T("ShoppingCart")</h1>
     </div>
     <div class="page-body">
         @{ Html.RenderPartial("OrderSummary", Model); }
