Disabled offcanvas cart for checkout pages & wishlist

--- a/src/Presentation/SmartStore.Web/Views/Checkout/Completed.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Checkout/Completed.cshtml
@@ -3,6 +3,7 @@
 @{
     Layout = "_Checkout";
     Html.AddTitleParts(T("PageTitle.Checkout").Text);
+    Html.AddBodyCssClass("no-offcanvas-cart");
 }
 
 @section orderProgress{
