--- a/src/Presentation/SmartStore.Web/Views/Checkout/BillingAddress.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Checkout/BillingAddress.cshtml
@@ -1,10 +1,9 @@
 ﻿@model CheckoutBillingAddressModel
-@using SmartStore.Core.Domain.Orders;
 @using SmartStore.Web.Models.Checkout;
-@using SmartStore.Web.Models.Common;
 @{
     Layout = "_Checkout";
     Html.AddTitleParts(T("PageTitle.Checkout").Text);
+    Html.AddBodyCssClass("no-offcanvas-cart");
 }
 
 @section orderProgress{
