--- a/src/Presentation/SmartStore.Web/Views/ShoppingCart/Wishlist.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/ShoppingCart/Wishlist.cshtml
@@ -1,9 +1,9 @@
 ﻿@model WishlistModel
-@using SmartStore.Core.Domain.Catalog;
 @using SmartStore.Web.Models.ShoppingCart;
 @{
     Layout = "_Layout";
     Html.AddTitleParts(T("PageTitle.Wishlist").Text);
+    Html.AddBodyCssClass("no-offcanvas-cart");
 }
 
 @helper SimpleProduct(WishlistModel.ShoppingCartItemModel item)
