--- a/src/Presentation/SmartStore.Web/Views/Profile/Index.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Profile/Index.cshtml
@@ -1,31 +1,28 @@
 ﻿@model ProfileIndexModel
-
 @using SmartStore.Web.Models.Profile;
 @using SmartStore.Web.Framework.UI;
-
 @{    
     Layout = "_Layout";
     Html.AddTitleParts(T("PageTitle.Profile").Text);
+
+    var postsTabSelected = Model.PagingPosts;
 }
 
 <div class="page profile-page">
     <div class="page-title">
-        <h1>@Model.ProfileTitle</h1>
+        <h1 class="h2">@Model.ProfileTitle</h1>
     </div>
 
     <div class="page-body">
-        @{
-            var postsTabSelected = Model.PagingPosts;
-        }
-
-        @Html.SmartStore().TabStrip().Name("tabs").SmartTabSelection(false).ComponentVersion(BootstrapVersion.V4).Items(c => 
+        @Html.SmartStore().TabStrip().Name("profile-tabs").HtmlAttributes(new { @class = "profile-tabs" }).SmartTabSelection(false).Style(TabsStyle.Material).Responsive(true, "<md").Items(x =>
         {
-            c.Add().Text(T("Profile.PersonalInfo").Text)
-                .Selected(!postsTabSelected)
+            x.Add().Text(T("Profile.PersonalInfo").Text)
+                .Selected(true)
                 .Content(Html.Action("info", new { customerProfileId = Model.CustomerProfileId }).ToString());
+
             if (Model.ForumsEnabled)
             {
-                c.Add().Text(T("Profile.LatestPosts").Text)
+                x.Add().Text(T("Profile.LatestPosts").Text)
                     .Selected(postsTabSelected)
                     .Content(Html.Action("posts", new { customerProfileId = Model.CustomerProfileId, page = Model.PostsPage }).ToString());
             }
