Theming: private messages

--- a/src/Presentation/SmartStore.Web/Themes/Flex/Content/_misc.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/Content/_misc.scss
@@ -113,3 +113,11 @@ body.popup {
 .fileupload .fileupload-progress.collapse.show {
     display: block !important; 
 }
+
+
+/* Private Messages
+================================================ */
+.pm-unread {
+	font-weight: bold;
+	background: #f7f7f7;
+}
