--- a/src/Presentation/SmartStore.Web/Views/PrivateMessages/Index.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/PrivateMessages/Index.cshtml
@@ -1,27 +1,22 @@
 ﻿@model PrivateMessageIndexModel
 @using SmartStore.Web.Models.PrivateMessages;
 @using SmartStore.Web.Framework.UI;
-
 @{    
     Layout = "_Layout";
-
     Html.AddTitleParts(T("PageTitle.PrivateMessages").Text);
-}
-<div class="page private-messages-page">
-    <div class="page-title">
-        <h1>@T("PrivateMessages.PrivateMessages")</h1>
-    </div>
-    <div class="page-body">
-        @Html.SmartStore().TabStrip().Name("product-detail-tabs").SmartTabSelection(false).ComponentVersion(BootstrapVersion.V4).Items(x =>
-        {
-            x.Add().Text(@T("PrivateMessages.Inbox"))
-                .Content( Html.Action("Inbox", new { page = Model.InboxPage, tab = "inbox" }).ToString() )
-                .Selected(!Model.SentItemsTabSelected);
-            
-            x.Add().Text(@T("PrivateMessages.SentItems"))
-                .Content( Html.Action("SentItems", new { page = Model.SentItemsPage, tab = "sent" }).ToString() )
-                .Selected(Model.SentItemsTabSelected);
-        })
 
-    </div>
-</div>
+    Layout = "_MyAccount";
+    ViewBag.PageClassToken = "privatemessages";
+    ViewBag.PageTitle = T("PrivateMessages.PrivateMessages").Text;
+}
+
+@Html.SmartStore().TabStrip().Name("pm-tabs").HtmlAttributes(new { @class = "pm-tabs" }).SmartTabSelection(false).Style(TabsStyle.Material).Responsive(true, "<md").Items(x =>
+{
+    x.Add().Text(@T("PrivateMessages.Inbox"))
+        .Content(Html.Action("Inbox", new { page = Model.InboxPage, tab = "inbox" }).ToString())
+        .Selected(true);
+
+    x.Add().Text(@T("PrivateMessages.SentItems"))
+        .Content(Html.Action("SentItems", new { page = Model.SentItemsPage, tab = "sent" }).ToString())
+        .Selected(Model.SentItemsTabSelected);
+})
