--- a/src/Presentation/SmartStore.Web/Views/PrivateMessages/Partials/Inbox.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/PrivateMessages/Partials/Inbox.cshtml
@@ -24,10 +24,12 @@
         using (Html.BeginForm("InboxUpdate", (string)null))
         {
         <table class="table" cellspacing="0" cellpadding="4" id="pm-inbox-table">
-            <col width="5%" />
-            <col width="20%" />
-            <col width="50%" />
-            <col width="25%" />
+            <colgroup>
+                <col width="5%" />
+                <col width="20%" />
+                <col width="50%" />
+                <col width="25%" />
+            </colgroup>
             <thead>
                 <tr class="pm-grid-header-style">
                     <th class="a-center">
