--- a/src/Presentation/SmartStore.Web/Views/ShoppingCart/Partials/OrderSummary.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/ShoppingCart/Partials/OrderSummary.cshtml
@@ -182,7 +182,7 @@
     }
     else
     {
-        <div class="alert alert-info fade show">
+        <div class="alert alert-warning fade show">
             @T("ShoppingCart.CartIsEmpty")
         </div>
     }
@@ -255,7 +255,7 @@
                 success: function (response) {
 
                     if (response.cartItemCount == 0) {
-                        orderSummary.html('<div class="alert alert-info fade show">@T("ShoppingCart.CartIsEmpty")</div>');
+                        orderSummary.html('<div class="alert alert-warning fade show">@T("ShoppingCart.CartIsEmpty")</div>');
                     }
 
                     var cartBody = $(".cart-body");
